syntax = "proto3";
package confio.poe.v1beta1;

import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos/staking/v1beta1/staking.proto";
import "tendermint/types/types.proto";

option go_package = "github.com/confio/tgrade/x/poe/types";

// PoEContractType type of PoE contract
enum PoEContractType {
  option (gogoproto.goproto_enum_prefix) = false;

  UNDEFINED = 0
      [ (gogoproto.enumvalue_customname) = "PoEContractTypeUndefined" ];
  STAKING = 1 [ (gogoproto.enumvalue_customname) = "PoEContractTypeStaking" ];
  VALSET = 2 [ (gogoproto.enumvalue_customname) = "PoEContractTypeValset" ];
  ENGAGEMENT = 3
      [ (gogoproto.enumvalue_customname) = "PoEContractTypeEngagement" ];
  MIXER = 4 [ (gogoproto.enumvalue_customname) = "PoEContractTypeMixer" ];
}

// Params defines the parameters for the PoE module.
message Params {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_stringer) = false;
  // historical_entries is the number of historical entries to persist.
  uint32 historical_entries = 4
      [ (gogoproto.moretags) = "yaml:\"historical_entries\"" ];
}