syntax = "proto3";
package confio.poe.v1beta1;

import "cosmos/base/query/v1beta1/pagination.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";
import "google/api/annotations.proto";
import "confio/poe/v1beta1/poe.proto";
import "cosmos/staking/v1beta1/staking.proto";
import "cosmos/staking/v1beta1/query.proto";

option go_package = "github.com/confio/tgrade/x/poe/types";

// Query defines the gRPC querier service.
service Query {
  // ContractAddress queries the address for one of the PoE contracts
  rpc ContractAddress(QueryContractAddressRequest)
      returns (QueryContractAddressResponse) {
    option (google.api.http).get =
        "/tgrade/poe/v1beta1/contract/{contract_type}";
  }

  // Validators queries all validators that match the given status.
  rpc Validators(cosmos.staking.v1beta1.QueryValidatorsRequest)
      returns (cosmos.staking.v1beta1.QueryValidatorsResponse) {
    option (google.api.http).get = "/tgrade/poe/v1beta1/validators";
  }

  // Validator queries validator info for given validator address.
  rpc Validator(cosmos.staking.v1beta1.QueryValidatorRequest)
      returns (cosmos.staking.v1beta1.QueryValidatorResponse) {
    option (google.api.http).get =
        "/tgrade/poe/v1beta1/validators/{validator_addr}";
  }
  // Validator queries validator info for given validator address.
  rpc UnbondingPeriod(QueryUnbondingPeriodRequest)
      returns (QueryUnbondingPeriodResponse) {
    option (google.api.http).get = "/tgrade/poe/v1beta1/staking/unbonding";
  }
}

// QueryContractAddressRequest is the request type for the Query/ContractAddress
// RPC method.
message QueryContractAddressRequest {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  // ContractType is the type of contract
  poe.v1beta1.PoEContractType contract_type = 1;
}

// QueryContractAddressRequest is the response type for the
// Query/ContractAddress RPC method.
message QueryContractAddressResponse { string address = 1; }

// QueryUnbondingPeriodRequest is request type for the Query/UnbondingPeriod RPC
// method
message QueryUnbondingPeriodRequest {}

// QueryUnbondingPeriodResponse is response type for the Query/UnbondingPeriod
// RPC method
message QueryUnbondingPeriodResponse {
  // Time is the time that must pass
  google.protobuf.Duration time = 1
      [ (gogoproto.nullable) = false, (gogoproto.stdduration) = true ];
  // Height is the number of blocks that must pass
  uint64 height = 2;
}
